--- a/public/.htaccess
+++ b/public/.htaccess
@@ -101,4 +101,27 @@
 
     # Referrer Policy
     Header set Referrer-Policy "strict-origin-when-cross-origin"
+
+    # Performance Headers
+    Header set Cache-Control "public, max-age=31536000" "expr=%{REQUEST_URI} =~ m#\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$#"
+    Header set Vary "Accept-Encoding"
+
+    # Remove ETags (we have Cache-Control)
+    Header unset ETag
+    FileETag None
+</IfModule>
+
+# Leverage Browser Caching for specific files
+<IfModule mod_expires.c>
+    # Enable the module
+    ExpiresActive on
+
+    # Set default expiration
+    ExpiresDefault "access plus 1 month"
+
+    # Override for specific file types
+    ExpiresByType text/html "access plus 0 seconds"
+    ExpiresByType text/xml "access plus 0 seconds"
+    ExpiresByType application/xml "access plus 0 seconds"
+    ExpiresByType application/json "access plus 0 seconds"
 </IfModule>
