--- a/public/.htaccess
+++ b/public/.htaccess
@@ -106,6 +106,9 @@
     Header set Cache-Control "public, max-age=31536000" "expr=%{REQUEST_URI} =~ m#\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$#"
     Header set Vary "Accept-Encoding"
 
+    # Enable Keep-Alive for better performance
+    Header set Connection keep-alive
+
     # Remove ETags (we have Cache-Control)
     Header unset ETag
     FileETag None
