--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.1",
         "postcss": "^8.5.6",
+        "sharp": "^0.34.4",
         "tailwindcss": "^3.4.17",
         "vite": "^7.1.5"
     }
